# grounding-doesnt-pay

./: .gitignore  .zenodo.json  CITATION.cff  NOTICE  PROVENANCE.json  PROVENANCE.md  README.md  REPRODUCIBILITY.md  codemeta.json  pyproject.toml  requirements-full.txt  requirements.txt  run_all.py
.github/workflows/: ci.yml
LICENSES/: CC-BY-4.0.txt
code/: pilot_common.py  pilot_config.json  posthoc_analysis.py  run_pilot_c1c7.py  score_pilot.py
data/: PREREGISTRATION.md  pilot_gen_full.jsonl  pilot_posthoc.json  pilot_report.md  pilot_scores.json
data/robustness/: ROBUSTNESS-FINDINGS.md  rescore_baseline.json  rescore_minstop.json  rescore_multilingual.json  rescore_summary.json
docs/paper/: paper-final.docx
runs/20260719T181656Z/: chain.json  checksums.sha256  manifest.json
runs/20260719T192823Z/: checksums.sha256  manifest.json
runs/20260719T201522Z/: chain.json  checksums.sha256  manifest.json
scripts/: build_chain.py  hash_utils.py  make_figures.py  rescore_robustness.py  verify_chain.py
tests/: test_paper_numbers.py
